# std_compat

./: CMakeLists.txt  COPYRIGHT.txt  README.markdown  std_compat.pc.in  std_compat_cxx.pc.in
checks/: byteswap.cc  cbeginend.cc  endian.cc  four_arg_equals.cc  lerp.cc  mutex.cc  shared_mutex.cc
cmake/: std_compatConfig.cmake.in
include/: algorithm.h  bit.h  cmath.h  cstddef.h  functional.h  iterator.h  language.h  memory.h  mutex.h  numeric.h  optional.h  shared_mutex.h  span.h  string_view.h  type_traits.h  utility.h  variant.h
src/: optional.cc  span.cc  std_compat_version.h.in  variant.cc
test/: CMakeLists.txt  GTestCMakeLists.txt.in  test_stdcompat.cc
